# intel-xai-tools

./: .buildinfo  .dockerignore  .gitignore  CODEOWNERS  DATASETS.md  LICENSE  MANIFEST.in  MODELS.md  Makefile  OKRs.html  README.md  bandit.yaml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  versions.html
explainer/: Makefile  README.md  __init__.py  api.html  api.py  categories.html  cli.html  cli.py  criteria.html  design.html  environment.yml  explanations.html  feature_attributions_explainer.html  foo.yaml  index.html  lm_layers_explainer.html  metrics_explainer.html  plugins.html  pyproject.toml  quickstart.html  setup.cfg  setup.py  types.html  version.py
explainer/attributions/: __init__.py  attributions.py  attributions_info.py  plots.py  pt_attributions.py  widgets.py
explainer/bibliography/: index.html
explainer/cam/: README.md  __init__.py  cam.py  pt_cam.py  tf_cam.py
explainer/commands/: cmd_explain.py  cmd_list.py  cmd_process.py  cmd_visualize.py  explainer.py  explanation.py
explainer/data/: winequality-red.arff
explainer/docs/: Makefile  _config.yml  _toc.yml  conf.py  index.md  references.bib  requirements.txt
explainer/docs/design/: api.rst  index.md  plugin.rst
explainer/docs/examples/: House_Prices_Regression_Interpret.ipynb  index.md  multiclass_classification_example.ipynb  zero_shot_learning.ipynb
explainer/examples/: ExplainingDeepLearningModels.html  PyTorch_Text_Classifier_fine_tuning.html  index.html  mnist.html  partitionexplainer.html
explainer/explainer/: __init__.py  api.py  cli.py  version.py
explainer/explainer/commands/: cmd_build.py  cmd_create.py  cmd_explain.py  cmd_export.py  cmd_extract.py  cmd_generate.py  cmd_import.py  cmd_info.py  cmd_install.py  cmd_list.py  cmd_uninstall.py  cmd_update.py  cmd_visualize.py
explainer/explainer/explainers/: cam_explainer.yaml  feature_attributions_explainer.yaml  house_prices_regression.yaml  integratedgradients.yaml  lm_classifier_explainer.yaml  lm_layers_explainer.yaml  lm_zeroshot_explainer.yaml  metrics_explainer.yaml  multiclass_classification.yaml  noisetunnel.yaml  test_explainer.yaml  test_import_from.yaml  zero-shot-learning.yaml  zero_shot_learning.yaml
explainer/explainer/plugins/cam_explainer/: Makefile  README.md  setup.py
explainer/explainer/plugins/feature_attributions_explainer/: Makefile  README.md  feature_attributions_explainer.py  setup.py
explainer/explainer/plugins/lm_layers_explainer/: Makefile  lm_layers_explainer.py  setup.py
explainer/explainer/plugins/metrics_explainer/: Makefile  metrics_explainer.py  setup.py
explainer/intel_ai_safety/explainer/: base_explainer.py  blackbox.py  version.py
explainer/intel_ai_safety/explainer/utils/: types.py
explainer/metrics/: README.md  metrics.py
explainer/notebooks/: Resnet_TorchVision_Interpret.ipynb  Waterfall_plot_for_SHAP.ipynb  dalex.ipynb  dice.ipynb  explainer_tests.ipynb  pybaobabdt.ipynb  test.html
explainer/tests/: conftest.py  pytest.ini  test_attributions.py  test_cam.py  test_cli.py  test_metrics.py
explainer/utils/: types.py
explainer/utils/graphics/: __init__.py
explainer/utils/model/: model_framework.py
model_card_gen/: Makefile  README.md  api.html  base_model_card_field.py  index.html  model_card.py  model_card_gen.py  pyproject.toml  setup.py  validation.py  version.py
model_card_gen/analyze/: __init__.py  analyzer.py  analyzer_factory.py  pandas_analyzer.py  tf_analyzer.py
model_card_gen/datasets/: datasets.py  tf_datasets.py  torch_datasets.py
model_card_gen/docs/examples/html/: compas_model_card.html
model_card_gen/docs/examples/json/: model_card_example.json
model_card_gen/graphics/: add_graphics.py  plotly_graphics.py
model_card_gen/intel_ai_safety/model_card_gen/: __init__.py  base_model_card_field.py  model_card.py  model_card_gen.py  validation.py  version.py
model_card_gen/intel_ai_safety/model_card_gen/analyze/: analyzer.py  analyzer_factory.py  pandas_analyzer.py  (+2 more)
model_card_gen/model_card_gen/: analyzer.py  base_model_card_field.py  datasets.py  model_card.py  model_card_gen.py  validation.py  version.py
model_card_gen/model_card_gen/analyze/: __init__.py  analyzer.py  analyzer_factory.py  pandas_analyzer.py  tf_analyzer.py  torch_analyzer.py
model_card_gen/model_card_gen/datasets/: __init__.py  datasets.py  tf_datasets.py  torch_datasets.py
model_card_gen/model_card_gen/graphics/: __init__.py  add_graphics.py  plotly_graphics.py  plotly_utils.py
model_card_gen/model_card_gen/notebooks/: adult-pytorch-model-card.ipynb  compas-model-card-tfx.ipynb  toxicity-tfma-model-card.ipynb
model_card_gen/model_card_gen/tests/: model.py  test_end_to_end.py  test_end_to_end_tf.py  test_end_to_end_torch.py  test_model_card.py  tf_model.py  torch_model.py
model_card_gen/model_card_gen/utils/: types.py
model_card_gen/model_card_ui/: README.md  generate_model_card_json.py  home.py  model_card_html_generator.py  persist.py  read_json.py  requirements.txt  session_state_initializer.py  utils.py
model_card_gen/model_card_ui/pages/: considerations.py  model_details.py  model_parameters.py  quantitative_analysis.py  view_model_card.py
model_card_gen/notebooks/: .gitignore  adult-pytorch-model-card.ipynb
model_card_gen/template/html/: default_template.html.jinja
model_card_gen/tests/: __init__.py  test_end_to_end_tf.py  test_end_to_end_torch.py  test_model_card.py  tf_model.py  torch_model.py
model_card_gen/utils/: __init__.py  types.py
plugins/benchmark/classification_metrics/: README.md  pyproject.toml  requirements.txt  version.py
plugins/explainers/attributions/: README.md  pyproject.toml
plugins/explainers/attributions-hugging-face/: README.md  pyproject.toml
plugins/explainers/cam-pytorch/: README.md  pyproject.toml
plugins/explainers/cam-tensorflow/: README.md  pyproject.toml
plugins/explainers/captum/: README.md  pyproject.toml
plugins/explainers/metrics/: README.md  pyproject.toml
plugins/mlcommons/modelgauge/: README.md  pyproject.toml
(+653 files in other folders)
