[tool.poetry]
name = "intel-ai-safety-explainer"
version = "1.3.0"
description = ""
authors = ["IntelAI <IntelAI@intel.com>"]
readme = "README.md"
packages = [
    {include = "intel_ai_safety", from="."},
]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
intel-ai-safety = {version = "*"}
ipywidgets = "8.1.5"

[tool.poetry.group.local.dependencies]
intel-ai-safety = {path=".."}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
datasets = "3.3.2"
deepdiff = "8.3.0"
pytest = "8.3.5"
scikit-learn = "1.6.1"
tensorflow-cpu = "2.17.1"
tensorflow-hub = "0.16.1"
torch = {version = "2.5.1", source = "pytorch-cpu"}
torchvision = {version = "0.20.1", source = "pytorch-cpu"}

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry_bumpversion.replacements]]
files = ["intel_ai_safety/explainer/version.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
