[tool.poetry]
name = "intel-ai-safety-model-card-gen"
version = "1.2.0"
description = ""
authors = ["IntelAI <IntelAI@intel.com>"]
readme = "README.md"
packages = [{include = "intel_ai_safety", from="."}]

[tool.setuptools.package-data]
intel_ai_safety.model_card_gen = [
    "model_card_gen/**/*.json",
    "model_card_gen/**/*.jinja",
    "model_card_gen/**/*.html",
    "model_card_gen/**/*.csv",
]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = '8.1.1'
pytest-cov = '5.0.0'

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pandas = "1.5.3"
ipython = "*"
dataclasses = '0.6'
Jinja2 = '3.1.4'
jsonschema = {version='4.17.3', extras = ['format-nongpl']}
plotly = '5.20.0'
semantic-version = '2.10.0'

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry_bumpversion.replacements]]
files = ["intel_ai_safety/model_card_gen/version.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
