[tool.poetry]
name = "intel-ai-safety-model-card-gen"
version = "1.3.0"
description = ""
authors = ["IntelAI <IntelAI@intel.com>"]
readme = "README.md"
packages = [{include = "intel_ai_safety", from="."}]

[tool.setuptools.package-data]
intel_ai_safety.model_card_gen = [
    "model_card_gen/**/*.json",
    "model_card_gen/**/*.jinja",
    "model_card_gen/**/*.html",
    "model_card_gen/**/*.csv",
]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "8.3.5"
pytest-cov = "6.0.0"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
dataclasses = "0.6"
ipython = "8.33.0"
Jinja2 = "3.1.6"
jsonschema = {version="4.23.0", extras = ['format-nongpl']}
pandas = "2.2.3"
plotly = "6.0.0"
semantic-version = "2.10.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry_bumpversion.replacements]]
files = ["intel_ai_safety/model_card_gen/version.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
