[tool.poetry]
name = "intel-ai-safety-benchmarks-classification"
version = "1.2.0"
description = ""
authors = ["IntelAI <IntelAI@intel.com>"]
readme = "README.md"
packages = [
    {include = "classification_metrics", from="."},
]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
evaluate = "*"
loguru = "*"
pandas = "1.5.3"
numpy= "1.24.4"
scikit-learn = "1.5.0"
torch = {version = "2.2.0", source = "pytorch-cpu"}
torchmetrics = "*"
transformers = "4.48.0"
accelerate = "0.27.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "8.1.1"
pytest-cov = "5.0.0"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry_bumpversion.replacements]]
files = ["version.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'