[tool.poetry]
name = "intel-ai-safety-benchmarks-classification"
version = "1.3.0"
description = ""
authors = ["IntelAI <IntelAI@intel.com>"]
readme = "README.md"
packages = [
    {include = "classification_metrics", from="."},
]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
accelerate = "1.4.0"
evaluate = "0.4.3"
loguru = "0.7.3"
numpy= "1.26.4"
pandas = "2.2.3"
scikit-learn = "1.6.1"
torchmetrics = "*"
torch = {version = "2.5.1", source = "pytorch-cpu"}
transformers = "4.49.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = '*'
pytest-cov = '*'

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry_bumpversion.replacements]]
files = ["version.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
