[tool.poetry]
name = "intel-ai-safety-explainer-attributions-hugging-face"
version = "1.3.0"
description = ""
authors = ["IntelAI <IntelAI@intel.com>"]
readme = "README.md"
packages = [
    {include = "intel_ai_safety", from="."},
]

[tool.poetry.dependencies]
intel-ai-safety-explainer = {version = "*"}
python = ">=3.10, <3.12"
shap = "0.47.0"

[tool.poetry.group.local.dependencies]
intel-ai-safety-explainer = {path = "../../../explainer"}
intel-ai-safety = {path = "../../.."}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
matplotlib = "*"
pytest = "8.3.5"
pytest-cov = "6.0.0"
sentencepiece = "0.2.0"
torch = {version = "2.6.0", source = "pytorch-cpu"}
transformers = "4.50.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"
