[tool.poetry]
name = "intel-ai-safety-explainer-attributions"
version = "1.0.0"
description = ""
authors = ["IntelAI <IntelAI@intel.com>"]
readme = "README.md"
packages = [
    {include = "intel_ai_safety", from="."},
]


[tool.poetry.dependencies]
intel-ai-safety-explainer = {version = "*"}
python = ">=3.9, <3.11"
ipywidgets = '7.8.1'
matplotlib = '3.8.3'
numpy = '1.24.4'
opencv-python = '4.9.0.80'
plotly = '5.20.0'
shap = '0.44.1'
transformers = '4.39.0'

[tool.poetry.group.local.dependencies]
intel-ai-safety-explainer = {path = "../../../explainer"}
intel-ai-safety = {path = "../../.."}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
intel-tensorflow = '2.14.0'
pillow = '10.2.0'
pytest = '8.1.1'
transformers = '4.39.0'
torch = {version = "2.2.0", source = "pytorch-cpu"}
torchvision = {version = "0.17.0", source = "pytorch-cpu"}

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"
