[tool.poetry]
name = "intel-ai-safety-explainer-attributions"
version = "1.3.0"
description = ""
authors = ["IntelAI <IntelAI@intel.com>"]
readme = "README.md"
packages = [
    {include = "intel_ai_safety", from="."},
]

[tool.poetry.dependencies]
intel-ai-safety-explainer = {version = "*"}
python = ">=3.10, <3.12"
ipywidgets = "8.1.5"
matplotlib = "3.10.1"
numpy = "1.26.4"
opencv-python = "4.11.0.86"
plotly = "6.0.0"
shap = "0.47.0"
transformers = "4.49.0"

[tool.poetry.group.local.dependencies]
intel-ai-safety-explainer = {path = "../../../explainer"}
intel-ai-safety = {path = "../../.."}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "8.3.5"
pytest-cov = "6.0.0"
tensorflow-cpu = "2.17.1"
torch = {version = "2.5.1", source = "pytorch-cpu"}
torchvision = {version = "0.20.1", source = "pytorch-cpu"}

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"
