[tool.poetry]
name = "intel-ai-safety-explainer-cam-tensorflow"
version = "1.3.0"
description = ""
authors = ["IntelAI <IntelAI@intel.com>"]
readme = "README.md"
packages = [
    {include = "intel_ai_safety", from="."},
]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
intel-ai-safety-explainer = {version = "*"}
numpy = "1.26.4"
opencv-python = "4.11.0.86"
tensorflow-cpu = "2.17.1"

[tool.poetry.group.local.dependencies]
intel-ai-safety-explainer = {path = "../../../explainer"}
intel-ai-safety = {path = "../../.."}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
matplotlib = "3.10.1"
pillow = "11.1.0"
pytest = "8.3.5"
pytest-cov = "6.0.0"
tensorflow-cpu = "2.17.1"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"
