[tool.poetry]
name = "intel-ai-safety-explainer-metrics"
version = "1.1.0"
description = ""
authors = ["IntelAI <IntelAI@intel.com>"]
readme = "README.md"
packages = [
    {include = "intel_ai_safety", from="."},
]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
intel-ai-safety-explainer = {version = "*"}
matplotlib = '3.8.3'
numpy = '1.24.4'
pandas = '1.5.3'
plotly = '5.20.0'
scikit-learn = '1.5.0'
scikit-plot = '0.3.7'
scipy = '1.12.0'
seaborn = '0.13.2'

[tool.poetry.group.local.dependencies]
intel-ai-safety-explainer = {path = "../../../explainer"}
intel-ai-safety = {path = "../../.."}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = '8.1.1'
pytest-cov = '5.0.0'
torch = {version = "2.2.0", source = "pytorch-cpu"}
torchvision = {version = "0.17.0", source = "pytorch-cpu"}
deepdiff = '6.7.1'

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"

