[tool.poetry]
name = "intel-ai-safety-explainer-metrics"
version = "1.3.0"
description = ""
authors = ["IntelAI <IntelAI@intel.com>"]
readme = "README.md"
packages = [
    {include = "intel_ai_safety", from="."},
]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
intel-ai-safety-explainer = {version = "*"}
matplotlib = "3.10.1"
numpy = "1.26.4"
pandas = "2.2.3"
plotly = "6.0.0"
scikit-learn = "1.6.1"
scikit-plot = "0.3.7"
scipy = "1.15.2"
seaborn = "0.13.2"

[tool.poetry.group.local.dependencies]
intel-ai-safety-explainer = {path = "../../../explainer"}
intel-ai-safety = {path = "../../.."}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
deepdiff = "8.3.0"
pytest = "8.3.5"
pytest-cov = "6.0.0"
torch = {version = "2.6.0", source = "pytorch-cpu"}
torchvision = {version = "0.21.0", source = "pytorch-cpu"}

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"
